Add support for pushing to stack on Enter keypress

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button id="push-button" class="btn btn-primary" type="button" disabled="disabled">Push</button>
     </div>
     <div class="d-flex justify-content-center">
-      <ul id="stack" class="d-flex flex-column-reverse list-unstyled w-25 stack"></ul>
+      <ul id="stack" class="d-flex flex-column-reverse list-unstyled stack"></ul>
     </div>
   </div>
   <script type="module" src="./index.js"></script>
